[gd_scene load_steps=14 format=3 uid="uid://dafx1am402ipa"]

[ext_resource type="Script" uid="uid://btyhem5exmoop" path="res://Enemy/EnemyHuman.gd" id="1_px1sc"]
[ext_resource type="Script" uid="uid://br18rm6awsxa0" path="res://Enemy/EnemySkeleton.gd" id="2_eqilm"]
[ext_resource type="Script" uid="uid://cdhmyja6g0viv" path="res://Enemy/body.gd" id="3_am0pq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_px1sc"]
size = Vector2(12, 102)

[sub_resource type="CircleShape2D" id="CircleShape2D_am0pq"]
radius = 21.0047

[sub_resource type="RectangleShape2D" id="RectangleShape2D_am0pq"]
size = Vector2(11, 51)

[sub_resource type="SkeletonModification2DFABRIK" id="SkeletonModification2DFABRIK_am0pq"]
target_nodepath = NodePath("TargetLeft")
fabrik_data_chain_length = 2
joint_data/0/bone_index = 3
joint_data/0/bone2d_node = NodePath("torso/kneck/sholderLeft")
joint_data/1/bone_index = 4
joint_data/1/bone2d_node = NodePath("torso/kneck/sholderLeft/upperArmLeft")
joint_data/1/magnet_position = Vector2(0, 10)
joint_data/1/use_target_rotation = false

[sub_resource type="SkeletonModification2DFABRIK" id="SkeletonModification2DFABRIK_eqilm"]
target_nodepath = NodePath("TargetRight")
fabrik_data_chain_length = 2
joint_data/0/bone_index = 6
joint_data/0/bone2d_node = NodePath("torso/kneck/sholderRight")
joint_data/1/bone_index = 7
joint_data/1/bone2d_node = NodePath("torso/kneck/sholderRight/upperArmRight")
joint_data/1/magnet_position = Vector2(0, 10)
joint_data/1/use_target_rotation = false

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_eqilm"]
resource_local_to_scene = true
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DFABRIK_am0pq")
modifications/1 = SubResource("SkeletonModification2DFABRIK_eqilm")

[sub_resource type="Animation" id="Animation_4gyqm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/torso/hipRight:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/torso/hipLeft:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/torso/hipLeft/upperLegLeft:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/torso/hipLeft/upperLegLeft/lowerLegLeft:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/torso/hipRight/upperLegRight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/torso/hipRight/upperLegRight/lowerLegRight:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7xaro"]
resource_name = "walkLeft"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/torso/hipLeft:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.00491, 0.0, -0.617988, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/torso/hipLeft/upperLegLeft:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.69995, -0.711508, 0.0, -1.03223, -1.6993]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/torso/hipLeft/upperLegLeft/lowerLegLeft:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/torso/hipRight:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.55719, 0.0, 0.974742, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/torso/hipRight/upperLegRight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.973734, -1.66356, -0.799364, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/torso/hipRight/upperLegRight/lowerLegRight:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_7k104"]
resource_name = "walkRight"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/torso/hipRight:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.749966, 0.0, -1.53884, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/torso/hipLeft:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.60085, 0.0, 0.82915, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/torso/hipLeft/upperLegLeft:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.76071, 1.68034, 0.0, 0.665872, 1.8986]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/torso/hipLeft/upperLegLeft/lowerLegLeft:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/torso/hipRight/upperLegRight:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.65024, 1.86622, 1.60721, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/torso/hipRight/upperLegRight/lowerLegRight:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi2p4"]
_data = {
&"RESET": SubResource("Animation_4gyqm"),
&"walkLeft": SubResource("Animation_7xaro"),
&"walkRight": SubResource("Animation_7k104")
}

[node name="Enemy" type="Node2D" node_paths=PackedStringArray("gunHoldFrom")]
script = ExtResource("1_px1sc")
gunHoldFrom = NodePath("PB_torso/gunHoldFrom")

[node name="PB_torso" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 5
gravity_scale = 4.0
script = ExtResource("3_am0pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_torso"]
position = Vector2(1, -51)
shape = SubResource("RectangleShape2D_px1sc")

[node name="PinJoint2D" type="PinJoint2D" parent="PB_torso"]
node_a = NodePath("..")
node_b = NodePath("../../PB_hipLeft")

[node name="PinJoint2D2" type="PinJoint2D" parent="PB_torso"]
node_a = NodePath("..")
node_b = NodePath("../../PB_hipRight")

[node name="PinJoint2D3" type="PinJoint2D" parent="PB_torso"]
position = Vector2(1, -102)
node_a = NodePath("..")
node_b = NodePath("../../PB_sholderLeft")

[node name="PinJoint2D4" type="PinJoint2D" parent="PB_torso"]
position = Vector2(1, -102)
node_a = NodePath("..")
node_b = NodePath("../../PB_sholderRight")

[node name="PinJoint2D5" type="PinJoint2D" parent="PB_torso"]
position = Vector2(1, -102)
node_a = NodePath("..")
node_b = NodePath("../../PB_Head")

[node name="gunHoldFrom" type="Marker2D" parent="PB_torso"]
position = Vector2(1, -102)

[node name="LineOfSight" type="RayCast2D" parent="PB_torso"]
position = Vector2(2, -101)
target_position = Vector2(0, 0)

[node name="PB_Head" type="RigidBody2D" parent="."]
position = Vector2(1, -102)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")
limbAbilitys = Array[int]([3])

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_Head"]
position = Vector2(0, -21.765)
shape = SubResource("CircleShape2D_am0pq")

[node name="PB_hipLeft" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_hipLeft"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PB_upperLegLeft" type="RigidBody2D" parent="."]
position = Vector2(0, 50)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")
limbAbilitys = Array[int]([1])

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_upperLegLeft"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PinJoint2D" type="PinJoint2D" parent="PB_upperLegLeft"]
node_a = NodePath("../../PB_hipLeft")
node_b = NodePath("..")

[node name="PB_hipRight" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_hipRight"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PB_upperLegRight" type="RigidBody2D" parent="."]
position = Vector2(0, 50)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")
limbAbilitys = Array[int]([1])

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_upperLegRight"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PinJoint2D" type="PinJoint2D" parent="PB_upperLegRight"]
node_a = NodePath("../../PB_hipRight")
node_b = NodePath("..")

[node name="PB_sholderLeft" type="RigidBody2D" parent="."]
position = Vector2(1, -102)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_sholderLeft"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PB_upperArmLeft" type="RigidBody2D" parent="."]
position = Vector2(1, -50)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")
limbAbilitys = Array[int]([2, 4])

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_upperArmLeft"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PinJoint2D" type="PinJoint2D" parent="PB_upperArmLeft"]
node_a = NodePath("../../PB_sholderLeft")
node_b = NodePath("..")

[node name="Hand" type="Marker2D" parent="PB_upperArmLeft"]
position = Vector2(1, 48)

[node name="PB_sholderRight" type="RigidBody2D" parent="."]
position = Vector2(1, -102)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_sholderRight"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PB_upperArmRight" type="RigidBody2D" parent="."]
position = Vector2(1, -50)
collision_layer = 2
collision_mask = 5
script = ExtResource("3_am0pq")
limbAbilitys = Array[int]([2, 4])

[node name="CollisionShape2D" type="CollisionShape2D" parent="PB_upperArmRight"]
position = Vector2(0.5, 24.5)
shape = SubResource("RectangleShape2D_am0pq")

[node name="PinJoint2D" type="PinJoint2D" parent="PB_upperArmRight"]
node_a = NodePath("../../PB_sholderRight")
node_b = NodePath("..")

[node name="Hand" type="Marker2D" parent="PB_upperArmRight"]
position = Vector2(1, 48)

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_eqilm")
script = ExtResource("2_eqilm")

[node name="torso" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="kneck" type="Bone2D" parent="Skeleton2D/torso"]
position = Vector2(1, -102)
rest = Transform2D(1, 0, 0, 1, 1, -102)

[node name="head" type="Bone2D" parent="Skeleton2D/torso/kneck"]
rest = Transform2D(1, 0, 0, 1, -1, -34)

[node name="sholderLeft" type="Bone2D" parent="Skeleton2D/torso/kneck"]
scale = Vector2(0.999966, 0.999966)
rest = Transform2D(1, 0, 0, 1, 0, 0)
metadata/_local_pose_override_enabled_ = true

[node name="upperArmLeft" type="Bone2D" parent="Skeleton2D/torso/kneck/sholderLeft"]
position = Vector2(-1, 55)
scale = Vector2(0.999968, 0.999968)
rest = Transform2D(1, 0, 0, 1, -1, 55)
metadata/_local_pose_override_enabled_ = true

[node name="lowerArmLeft" type="Bone2D" parent="Skeleton2D/torso/kneck/sholderLeft/upperArmLeft"]
position = Vector2(-1, 57)
rest = Transform2D(1, 0, 0, 1, -1, 57)

[node name="sholderRight" type="Bone2D" parent="Skeleton2D/torso/kneck"]
scale = Vector2(0.999968, 0.999968)
rest = Transform2D(1, 0, 0, 1, 0, 0)
metadata/_local_pose_override_enabled_ = true

[node name="upperArmRight" type="Bone2D" parent="Skeleton2D/torso/kneck/sholderRight"]
position = Vector2(-1, 55)
scale = Vector2(0.999961, 0.999961)
rest = Transform2D(1, 0, 0, 1, -1, 55)
metadata/_local_pose_override_enabled_ = true

[node name="lowerArmRight" type="Bone2D" parent="Skeleton2D/torso/kneck/sholderRight/upperArmRight"]
position = Vector2(-1, 57)
rest = Transform2D(1, 0, 0, 1, -1, 57)

[node name="hipLeft" type="Bone2D" parent="Skeleton2D/torso"]
scale = Vector2(0.999926, 0.999926)
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="upperLegLeft" type="Bone2D" parent="Skeleton2D/torso/hipLeft"]
position = Vector2(0, 52)
scale = Vector2(0.999916, 0.999916)
rest = Transform2D(1, 0, 0, 1, 0, 52)

[node name="lowerLegLeft" type="Bone2D" parent="Skeleton2D/torso/hipLeft/upperLegLeft"]
position = Vector2(0, 51)
rest = Transform2D(1, 0, 0, 1, -6, 70)

[node name="hipRight" type="Bone2D" parent="Skeleton2D/torso"]
scale = Vector2(0.999924, 0.999924)
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="upperLegRight" type="Bone2D" parent="Skeleton2D/torso/hipRight"]
position = Vector2(0, 52)
scale = Vector2(0.999918, 0.999918)
rest = Transform2D(1, 0, 0, 1, 0, 52)

[node name="lowerLegRight" type="Bone2D" parent="Skeleton2D/torso/hipRight/upperLegRight"]
position = Vector2(0, 51)
rest = Transform2D(1, 0, 0, 1, -6, 70)

[node name="TargetLeft" type="Marker2D" parent="Skeleton2D"]
position = Vector2(-1, 22)

[node name="TargetRight" type="Marker2D" parent="Skeleton2D"]
position = Vector2(-1, 19)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qi2p4")
}
